# snake

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt
src/board/: CMakeLists.txt  Coordinates.cpp  Dummy.cpp
src/board/include/board/: ConstBoardValues.hpp  Coordinates.hpp  IBoard.hpp
src/drawing/: CMakeLists.txt  DrawingHandler.cpp
src/drawing/include/drawing/: DrawingHandler.hpp  IDrawingHandler.hpp
src/game/: CMakeLists.txt  Game.cpp
src/game/include/game/: Game.hpp  IGame.hpp
src/game_objects/: CMakeLists.txt  Fruit.cpp  Snake.cpp  Tail.cpp
src/game_objects/include/game_objects/: Fruit.hpp  IFruit.hpp  IObject.hpp  ISnake.hpp  Snake.hpp  Tail.hpp
test/: CMakeLists.txt  CoordinatesTests.cpp  GameTests.cpp  SnakeTests.cpp
